docs/modules/ROOT/examples/example-app-gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: demo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-app
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-app
    spec:
      containers:
        - name: demoapp
          image: quay.io/gpte-devops-automation/gitea:1.19.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: app-data
              mountPath: /data
            - name: db-ca
              mountPath: /srv/db-ca
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
        - name: db-ca
          secret:
            secretName: mysql-creds
            optional: false
            items:
              - key: ca.crt
                path: ca.crt
