docs/modules/ROOT/examples/example-app-odoo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  labels:
    app.kubernetes.io/name: demo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-app
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-app
    spec:
      containers:
        - name: odoo
          ## Until https://github.com/bitnami/containers/issues/17806 is solved
          ## we have to use a temporary image which is built with the proposed
          ## fix in https://github.com/bitnami/containers/pull/17885
          #image: docker.io/bitnami/odoo:latest
          image: docker.io/tobru/bitnami-odoo:dev
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8069
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: app-data
              mountPath: /bitnami/odoo
            - name: db-ca
              mountPath: /srv/db-ca
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
        - name: db-ca
          secret:
            secretName: postgresql-creds
            optional: false
            items:
              - key: ca.crt
                path: ca.crt
