docs/modules/ROOT/examples/example-app-takahe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-app
    spec:
      containers:
        - name: webserver
          image: jointakahe/takahe:0.6
          args:
            - "gunicorn"
            - "takahe.wsgi:application"
            - "-w"
            - "6"
            - "-b"
            - "0.0.0.0:8000"
          ports:
            - containerPort: 8000
              name: web
          resources:
            requests:
              cpu: 10m
            limits:
              memory: "1024Mi"
              cpu: 1
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 2
            failureThreshold: 30
            periodSeconds: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: stator
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stator
    spec:
      containers:
        - name: stator
          image: jointakahe/takahe:0.6
          args:
            - python3
            - manage.py
            - runstator
          resources:
            requests:
              cpu: 10m
            limits:
              memory: "1024Mi"
              cpu: 1
