docs/modules/ROOT/examples/example-app-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: demo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-app
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-app
    spec:
      containers:
        - name: wordpress
          image: docker.io/bitnami/wordpress:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: app-data
              mountPath: /bitnami
            - name: db-ca
              mountPath: /srv/db-ca
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
        - name: db-ca
          secret:
            secretName: mysql-creds
            optional: false
            items:
              - key: ca.crt
                path: ca.crt
