docs/modules/ROOT/examples/example-app-ghost.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels:
    app.kubernetes.io/name: ghost
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
    spec:
      containers:
        - name: ghost
          image: dockerhub.vshn.net/library/ghost:5-alpine
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 2368
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: ghost-data
              mountPath: /var/lib/ghost/content
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-data
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
  labels:
    app.kubernetes.io/name: ghost
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ghost
