docs/modules/ROOT/examples/example-app-inbucket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inbucket
  labels:
    app.kubernetes.io/name: inbucket
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: inbucket
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: inbucket
    spec:
      containers:
        - name: inbucket
          image: docker.io/inbucket/inbucket:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 2500
              name: smtp
              protocol: TCP
          resources:
            limits: {}
            requests: {}
---
apiVersion: v1
kind: Service
metadata:
  name: inbucket-web
  labels:
    app.kubernetes.io/name: inbucket
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: inbucket
---
apiVersion: v1
kind: Service
metadata:
  name: inbucket-smtp
  labels:
    app.kubernetes.io/name: inbucket
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: smtp
      port: 2500
      protocol: TCP
      targetPort: 2500
  selector:
    app.kubernetes.io/name: inbucket
