docs/modules/ROOT/examples/example-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  labels:
    app.kubernetes.io/name: demo-app
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: web
      port: 443
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: demo-app
