docs/modules/ROOT/examples/example-app-mastodon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon
  labels:
    app.kubernetes.io/name: demo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-app
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-app
    spec:
      containers:
        - name: mastodon-web
          image: docker.io/bitnami/mastodon:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: app-data
              mountPath: /bitnami/mastodon
        - name: mastodon-sidekiq
          image: docker.io/bitnami/mastodon:latest
          imagePullPolicy: Always
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: app-data
              mountPath: /bitnami/mastodon
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-streaming
  labels:
    app.kubernetes.io/name: demo-app-streaming
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-app-streaming
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-app-streaming
    spec:
      containers:
        - name: mastodon-streaming
          image: docker.io/bitnami/mastodon:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 4000
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: db-ca
              mountPath: /usr/local/share/ca-certificates
      volumes:
        - name: db-ca
          secret:
            secretName: postgresql-creds
            optional: false
            items:
              - key: ca.crt
                path: dbaas-postgresql-ca.crt
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-streaming
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: web
      port: 4000
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: demo-app-streaming
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon
  annotations:
    route.openshift.io/termination: "edge"
spec:
  rules:
  - host: CHANGEMEURL.apps.exoscale-ch-gva-2-0.appuio.cloud
    http:
      paths:
      - backend:
          service:
            name: example-app
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: CHANGEMEURL.apps.exoscale-ch-gva-2-0.appuio.cloud
    http:
      paths:
      - backend:
          service:
            name: mastodon-streaming
            port:
              number: 4000
        path: /streaming
        pathType: Prefix
