docs/modules/ROOT/examples/example-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-app
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: example-app
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
